2006-03-23  Steve Frécinaux  <steve@istique.net>

	* gedit/gedit-plugin-manager.c: show a description of the plugins
	in the plugin manager window, the way Epiphany does. (bug 326917)
	Patch by Przemysław Grzegorczyk.

2006-03-23  Steve Frécinaux  <steve@istique.net>

	* plugins/externaltools/tools/functions.py: enable syntax
	highlighting on the file created by the tool if relevant.
	
2006-03-23  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/snippets/SnippetsLibrary.py: fixes the disappearance
	of a snippet when it is reverted and it is the last user snippet in 
	the language (bug #334305). The fix simply sets the library of
	the snippet back to the system library before removing the snippet from 
	the user library, thus not causing it to be removed itself when the user
	library (and all its snippets) is removed from the container.

2006-03-22  Tommi Vainikainen  <thv@iki.fi>

	* configure.ac (ALL_LINGUAS): Added Dzongkha (dz).

2006-03-21  Steve Frécinaux  <steve@istique.net>

	* plugin/externaltools/tools/functions.py: fix bug 335302 (tools input
	methods). Patch by Juha Sahakangas.

2006-03-19  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/snippets/SnippetsLibrary.py: fix bug 334638
	patch by Arthur Peters.

2006-03-19  Christian Persch  <chpe@cvs.gnome.org>

	* gedit/gedit.c: (main): Call bind_textdomain_codeset before 
	using gettext. Bug #335119.

2006-03-19  Jérémy Ar Floc'h  <jeremy.lefloch@gmail.com>

	* po/br.po: Added Breton translation.
	* configure.ac: Added Breton translation.

2006-03-19  Steve Frécinaux  <steve@istique.net>

	* gedit/plugins/externaltools/tools/manager.py:
	* gedit/plugins/externaltools/tools/tools.glade: 
	
	Fake autoapply by updating the menu when the manager looses
	focus (bug 334963)

2006-03-18  Vladimer Sichinava  <vlsichinava@gmail.com>

	* configure.in: Added "ka" (Georgian) to ALL_LINGUAS

=== gedit 2.14.1 ===

2006-03-16  Jesse van den Kieboom  <jesse@icecrew.nl>
