@@ -1,3 +1,8 @@
+2006-03-23  Jesse van den Kieboom  <jesse@icecrew.nl>
+
+	* gedit/dialogs/gedit-search-dialog.c: tweak focus handling some
+	more. Bug 335169.
+
 2006-03-23  Steve Frécinaux  <steve@istique.net>
 
 	* gedit/gedit-plugin-manager.c: show a description of the plugins
